[package]
name = "tritium"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitflags = "1.3.2"
bytemuck = { version = "1.12.3", features = ["derive"] }
confy = { version = "0.5.1", default-features = false, features = ["ron_conf"] }
env_logger = "0.10.0"
glam = { version = "0.22.0", features = ["bytemuck"] }
half = { version = "2.1.0", features = ["bytemuck"] }
gltf = { version = "1.0.0", features = ["import"] }
image = { version = "0.24.5", default-features = false, features = ["png", "jpeg", "tga", "hdr"] }
log = "0.4.17"
maplit = "1.0.2"
ron = "0.8.0"
serde = { version = "1.0.147", features = ["derive"] }
serde_derive = "1.0.147"
tobj = { version = "3.2.3", features = ["async"] }
tokio = { version = "1.22.0", features = ["full"] }
wgpu = "0.14.0"
winit = "0.27.5"
